<resources>
    <string name="app_name">GuitarTraining</string>
    <string name="fragment_authentication_choice_connection_button_text">Se connecter</string>
    <string name="fragment_authentication_choice_not_connected_button_text">Mode hors connexion</string>
    <string name="fragment_authentication_choice_title">Bienvenue sur l\'application Guitar Training</string>
    <string name="fragment_connection_hint_password">Mot de passe</string>
    <string name="fragment_connection_create_account">Créer un compte</string>
    <string name="fragment_connection_hint_username">Nom d\'utilisateur</string>
    <string name="fragment_connection_forgot_password">Mot de passe oublié ?</string>
    <string name="fragment_not_connected_program_choice_technical_button_text">Programme technique</string>
    <string name="fragment_not_connected_program_choice_theoretical_button_text">Programme théorique</string>
    <string name="fragment_not_connected_program_choice_title">Sélectionne un des deux programmes par défaut</string>
    <string name="fragment_connection_title">Renseigne tes informations de connexion</string>
    <string name="fragment_user_programs_creation_button_validate_text">Créer</string>
    <string name="fragment_user_programs_creation_name_program_hint">Nom du programme</string>
    <string name="fragment_user_programs_creation_add_exercise_text">Ajouter un exercise</string>
    <string name="fragment_user_programs_list_no_program_text">Aucun programme disponible</string>
    <string name="fragment_user_programs_list_nb_exercises_text">Nombre d\'exercises : %s</string>
    <string name="fragment_user_programs_creation_type_exercise_text">Type de l\'exercise</string>
    <string name="fragment_user_programs_creation_duration_exercise_hint">Durée de l\'exercise</string>
    <string name="fragment_user_programs_creation_duration_exercise_text">Durée de l\'exercise : %s</string>
    <string name="fragment_user_programs_creation_description_program_hint">Description du programme</string>
    <string name="fragment_user_programs_list_total_duration_exercises_minutes_text">Durée totale du programme: %s minutes</string>
    <string name="fragment_user_programs_list_total_duration_exercises_hours_text">Durée totale du programme: %1$s heure(s) et %2$s minutes</string>
    <string name="fragment_user_details_program_exercises_text">Exercices</string>
    <string name="fragment_user_details_program_no_description_text">Pas de description</string>
    <string name="fragment_user_details_program_start_button_text">Démarrer le programme</string>
    <string name="fragment_user_details_program_update_button_text">Modifier le programme</string>
    <string name="fragment_user_details_program_remove_button_text">Supprimer le programme</string>
    <string name="fragment_user_details_duration_exercise_minutes_txt">%1$s minutes</string>
    <string name="fragment_user_details_duration_exercise_hours_txt">%1$s heures %2$s minutes</string>
    <string name="fragment_user_details_update_exercises_text">Exercices</string>
    <string name="fragment_user_update_program_start_button_text">Valider</string>
    <string name="generic_exercise_end_program_text">Terminer</string>
    <string name="generic_exercise_end_title_text">FELICITATIONS !</string>
    <string name="generic_exercise_start_program_text">Let\'s rock</string>
    <string name="generic_exercise_next_exercise_text">Exercice suivant</string>
    <string name="generic_exercise_start_button_text">Commencer l\'exercice</string>
    <string name="generic_exercise_choice_creation_program">Choix de l\'exercise</string>
    <string name="generic_exercise_duration_left_text"><![CDATA[<b>Temps restant :</b>]]> %1$s minutes.</string>
    <string name="generic_exercise_duration_text"><![CDATA[<b>Durée de l\'exercice :</b>]]> %1$s minutes.</string>
    <string name="generic_exercise_end_description_text">Vous êtes parvenu au bout du programme. A bientôt !</string>
    <string name="exercise_scale_note_text">Note</string>
    <string name="exercise_scale_tone_text">Mode</string>
    <string name="exercise_scale_title_text">Pratique des gammes</string>
    <string name="exercise_scale_dialog_choice_mode_text">Choix du mode</string>
    <string name="exercise_scale_dialog_choice_note_text">Choix de la note</string>
    <string name="exercise_scale_description_text"><![CDATA[Entraine toi à improviser sur une gamme ! Choisi la gamme de ton choix ou sélectionne la aléatoirement à l\'aide des listes ci-dessous.]]></string>
    <string name="exercise_mode_mode_text">Mode</string>
    <string name="exercise_mode_title_text">Pratique des modes</string>
    <string name="exercise_mode_dialog_choice_mode_text">Choix du mode</string>
    <string name="exercise_mode_description_text">Entraîne toi à improviser avec un mode de ton choix ou choisi de manière aléatoire ! </string>
    <string name="exercise_pull_off_hammer_on_title_text">Pull off / Hammer on</string>
    <string name="exercise_pull_off_hammer_on_description_text">Entraine toi aux hammer on et aux pull off ! </string>
    <string name="exercise_bend_slide_title_text">Bend / Slide</string>
    <string name="exercise_bend_slide_description_text">Entraine toi aux slides et aux bends !</string>
    <string name="exercise_back_forth_title_text">Allers et retours</string>
    <string name="exercise_back_forth_description_text">Entraine toi à faire des allers et retours à la main droite !</string>
    <string name="exercise_palm_mute_title_text">Palm mute</string>
    <string name="exercise_palm_mute_description_text">Entraine toi aux palm-mutes !</string>
    <string name="exercise_skip_string_title_text">Muter une corde en accord</string>
    <string name="exercise_skip_fragment_description_text">Entraine toi à jouer des accords en sautant une corde !</string>
    <string name="exercise_tapping_title_text">Tapping</string>
    <string name="exercise_speed_description_text">Entraine toi à jouer vite !</string>
    <string name="exercise_sweep_picking_title_text">Sweep picking</string>
    <string name="exercise_sweep_picking_description_text">Entraine toi au sweep picking !</string>
    <string name="exercise_speed_title_text">Vitesse</string>
    <string name="exercise_tapping_description_text">Entraine toi au tapping !</string>
    <string name="note_C">C</string>
    <string name="note_C_sharp">C# / Db</string>
    <string name="note_D">D</string>
    <string name="note_D_sharp">D# / Eb</string>
    <string name="note_E">E</string>
    <string name="note_F">F</string>
    <string name="note_F_sharp">F# / Gb</string>
    <string name="note_G">G</string>
    <string name="note_G_sharp">G# / Ab</string>
    <string name="note_A">A</string>
    <string name="note_A_sharp">A# / Bb</string>
    <string name="note_B">B</string>
    <string name="tone_major">Majeur</string>
    <string name="tone_minor">Mineur</string>
    <string name="tone_pentatonic">Pentatonique</string>
    <string name="mode_ionian">Ionien</string>
    <string name="mode_dorian">Dorien</string>
    <string name="mode_phrygian">Phrygien</string>
    <string name="mode_lydian">Lydien</string>
    <string name="mode_mixolydian">Mixolydien</string>
    <string name="mode_aeolian">Aeolien</string>
    <string name="mode_locrian">Locrien</string>
    <string name="timer_pause_button">Pause</string>
    <string name="timer_title">C\'est parti !</string>
    <string name="timer_start_button">Démarrer</string>
    <string name="generic_dialog_title_about">A propos</string>
    <string name="generic_dialog_title_attention">Attention …</string>
    <string name="generic_dialog_quit_confirmation">Es-tu sûr de vouloir quitter ?</string>
    <string name="generic_dialog_on_back_pressed">Es-tu certain de vouloir quitter l\'application ?</string>
    <string name="login_dialog_title">Connexion en cours …</string>
    <string name="login_dialog_content">Veuillez patientez …</string>
    <string name="dialog_program_loading_title">Chargement du programme</string>
    <string name="dialog_program_loading_description">Récupération des données … Accorde toi en attendant !</string>
    <string name="generic_dialog_exercise_fragment_lets_go">C\'est parti !</string>
    <string name="dialog_skip_fragment_exercise_description">Joue tes accords en mutant une corde !</string>
    <string name="dialog_tapping_exercise_description">Prends toi pour Van Halen et fais nous quelques tappings !</string>
    <string name="dialog_speed_exercise_description">Joue le plus rapidement possible … Mais toujours en rythme !</string>
    <string name="dialog_bend_slide_description">La base de la base ! Deux trois bends et slide bien placés, c\'est la classe assurée ! </string>
    <string name="dialog_palm_mute_exercise_description">Réveille le punk qui et en toi ! Exemples de groupe : Sum 41, Blink 182, The Offspring !</string>
    <string name="dialog_mode_exercise_description">De la même manière que les gammes, savoir ses modes te permettra de te la péter en concert ! </string>
    <string name="dialog_sweep_picking_exercise_description">Balaye les cordes de la main droite en coordonnant les mouvements de ta main gauche ! </string>
    <string name="dialog_pull_off_hammer_on_exercise_description">La base de la base ! Exemple de musique à travailer : The Trooper de Iron Maiden !</string>
    <string name="dialog_back_forth_exercise_description">Avis aux zicos (et surtout aux métalleux) : Des allers retours rapide, c\'est plutôt utile !</string>
    <string name="dialog_scale_exercise_description">Connaître quelques gammes te permettra de savoir improviser sur n\'importe quelle musique … Et ça c\'est plutôt classe ! </string>
    <string name="generic_toolbar_about_title">A propos</string>
    <string name="generic_button_validate">Valider</string>
    <string name="toolbar_title_online_mode">Connexion</string>
    <string name="toolbar_title_not_connected_mode">Mode hors connexion</string>
    <string name="toolbar_title_details_program">Détails</string>
    <string name="toolbar_title_creation_program">Création</string>
    <string name="toolbar_title_end_program">Fin du programme</string>
    <string name="toolbar_title_custom_program">Mon programme</string>
    <string name="toolbar_title_technical_program">Programme technique</string>
    <string name="toolbar_title_theoretical_program">Programme théorique</string>
    <string name="toolbar_title_exercise_mode">Modes</string>
    <string name="toolbar_title_exercise_scale">Gammes</string>
    <string name="toolbar_title_exercise_speed">Vitesse</string>
    <string name="toolbar_title_exercise_tapping">Tapping</string>
    <string name="toolbar_title_exercise_palm_mute">Palm mute</string>
    <string name="toolbar_title_exercise_bend_slide">Bend / Slide</string>
    <string name="toolbar_title_exercise_back_forth">Allers retours</string>
    <string name="toolbar_title_exercise_skip_string">Mute une corde</string>
    <string name="toolbar_title_exercise_sweep_picking">Sweep picking</string>
    <string name="toolbar_title_exercise_pull_off_hammer_on">Pull off / Hammer on</string>
    <string name="toolbar_title_user_program_creation">Création d\'un programme</string>
    <string name="toolbar_title_user_program_edition">Modification d\'un programme</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_songs">Mes chansons</string>
    <string name="navigation_drawer_programs">Mes programmes</string>
    <string name="generic_error_title_text">Erreur …</string>
    <string name="generic_error_retry_text">Réessayer</string>
    <string name="generic_error_give_up_text">Abandonner</string>
    <string name="generic_error_text">OUPS ! Tu as cassé une corde …</string>
    <string name="content_description_random_button">To select randomly</string>
</resources>