<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/exercise_padding"
    android:weightSum="100">

    <TextView
        android:id="@+id/fragment_exercise_scale_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/exercise_scale_title_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/exercise_title_size"/>

    <TextView
        android:id="@+id/fragment_exercise_scale_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center_vertical"
        android:text="@string/exercise_scale_description_text"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_exercise_scale_button_choice_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/ic_dropdown_black"
            android:text="@string/exercise_scale_note_text"
            android:textAllCaps="false"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/fragment_exercise_scale_random_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_random_button"
            android:src="@drawable/ic_random_scale"/>

        <Button
            android:id="@+id/fragment_exercise_scale_button_choice_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/ic_dropdown_black"
            android:text="@string/exercise_scale_tone_text"
            android:textAllCaps="false"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_exercise_scale_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tool:text="@string/generic_exercise_duration_text"/>

        <TextView
            android:id="@+id/fragment_exercise_scale_duration_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tool:text="@string/generic_exercise_duration_left_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/fragment_exercise_scale_button_start_exercise"
            android:layout_width="@dimen/generic_button_width"
            android:layout_height="@dimen/generic_button_height"
            android:background="@drawable/button_drawable"
            android:text="@string/generic_exercise_start_button_text"
            android:textColor="@android:color/white"/>

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_space_between_two_buttons"/>

        <Button
            android:id="@+id/fragment_exercise_scale_next_button"
            android:layout_width="@dimen/generic_button_width"
            android:layout_height="@dimen/generic_button_height"
            android:background="@drawable/button_drawable"
            android:text="@string/generic_exercise_next_exercise_text"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>