<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/exercise_padding"
    android:weightSum="100">

    <TextView
        android:id="@+id/fragment_exercise_palm_mute_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/exercise_palm_mute_title_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/exercise_title_size"/>

    <TextView
        android:id="@+id/fragment_exercise_palm_mute_description"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/exercise_palm_mute_description_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_exercise_palm_mute_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tool:text="@string/generic_exercise_duration_text"/>

        <TextView
            android:id="@+id/fragment_exercise_palm_mute_duration_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tool:text="@string/generic_exercise_duration_left_text"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/fragment_exercise_palm_mute_start_exercise_button"
            android:layout_width="@dimen/generic_button_width"
            android:layout_height="@dimen/generic_button_height"
            android:background="@drawable/button_drawable"
            android:text="@string/generic_exercise_start_button_text"
            android:textColor="@android:color/white"/>

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_space_between_two_buttons"/>

        <Button
            android:id="@+id/fragment_exercise_palm_mute_next_button"
            android:layout_width="@dimen/generic_button_width"
            android:layout_height="@dimen/generic_button_height"
            android:background="@drawable/button_drawable"
            android:text="@string/generic_exercise_next_exercise_text"
            android:textColor="@android:color/white"/>


        </LinearLayout>
</LinearLayout>