<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/exercise_padding">

    <TextView
        android:id="@+id/fragment_exercise_pull_off_hammer_on_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal"
        android:text="@string/exercise_pull_off_hammer_on_title_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/exercise_title_size" />

    <TextView
        android:id="@+id/fragment_exercise_pull_off_hammer_on_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/exercise_pull_off_hammer_on_description_text" />

    <TextView
        android:id="@+id/fragment_exercise_pull_off_hammer_on_duration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/fragment_exercise_pull_off_hammer_on_duration_left"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_exercise_pull_off_hammer_on_start_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_exercise_start_button_text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/fragment_exercise_pull_off_hammer_on_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_exercise_next_exercise_text" />
    </RelativeLayout>

</LinearLayout>