<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/linearLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    tool:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/fragment_exercise_tapping_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/exercise_tapping_title_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/exercise_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_exercise_tapping_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exercise_tapping_description_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_tapping_title" />


    <TextView
        android:id="@+id/fragment_exercise_tapping_duration"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_tapping_description"
        tool:text="@string/generic_exercise_duration_text" />

    <TextView
        android:id="@+id/fragment_exercise_tapping_duration_left"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_tapping_duration"
        tool:text="@string/generic_exercise_duration_left_text" />


    <Button
        android:id="@+id/fragment_exercise_tapping_button_start_exercise"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_drawable"
        android:text="@string/generic_exercise_start_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/exercise_tapping_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exercise_tapping_next_button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_drawable"
        android:text="@string/generic_exercise_next_exercise_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>