<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/fragment_exercise_mode_title"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/exercise_mode_title_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/exercise_title_size"
        app:layout_constraintBottom_toTopOf="@+id/fragment_exercise_mode_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_exercise_mode_description" />

    <TextView
        android:id="@+id/fragment_exercise_mode_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:layout_marginTop="86dp"
        android:gravity="center_vertical"
        android:text="@string/exercise_mode_description_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_exercise_mode_button_choice_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/fragment_exercise_mode_button_choice_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="222dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_dropdown_black"
        android:text="@string/exercise_mode_mode_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/fragment_exercise_mode_random_selection"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fragment_exercise_mode_random_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/content_description_random_button"
        android:src="@drawable/ic_random_scale"
        app:layout_constraintEnd_toEndOf="@+id/fragment_exercise_mode_description"
        app:layout_constraintTop_toTopOf="@+id/fragment_exercise_mode_button_choice_mode" />


    <TextView
        android:id="@+id/fragment_exercise_mode_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="143dp"
        android:layout_marginTop="142dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_exercise_mode_duration_left"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_mode_description"
        tool:text="@string/generic_exercise_duration_text" />

    <TextView
        android:id="@+id/fragment_exercise_mode_duration_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_exercise_mode_description"
        app:layout_constraintTop_toTopOf="@+id/fragment_exercise_mode_duration"
        tool:text="@string/generic_exercise_duration_text" />


    <Button
        android:id="@+id/fragment_exercise_mode_button_start_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_drawable"
        android:text="@string/generic_exercise_start_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_exercise_mode_next_button"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_mode_duration_left" />

    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="175dp"
        android:layout_marginLeft="176dp"
        android:layout_marginRight="175dp"
        android:layout_marginStart="176dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_exercise_mode_duration_left" />

    <Button
        android:id="@+id/fragment_exercise_mode_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_drawable"
        android:text="@string/generic_exercise_next_exercise_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/space" />

</android.support.constraint.ConstraintLayout>